--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -4,7 +4,7 @@
 [url "git@github.com:"]
 	insteadOf = https://github.com/
 [core]
-	editor = vim
+	editor = nvim
 [init]
 	defaultBranch = main
 [color]
