--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,5 +1,6 @@
 shell_integration no-cursor
 cursor_shape block
+cursor_blink_interval 0
 font_size 17.1
 font_family Iosevka Term
 tab_bar_style hidden
