--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -2,7 +2,7 @@ shell_integration no-cursor
 cursor_shape block
 cursor_blink_interval 0
 font_size 17.1
-font_family Iosevka Term
+font_family Iosevka Term Nerd Font
 tab_bar_style hidden
 enable_audio_bell no
 hide_window_decorations yes
