--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,8 +1,10 @@
 shell_integration no-cursor
 cursor_shape block
 cursor_blink_interval 0
-font_size 17.1
-font_family Iosevka Term Nerd Font
+font_size 16
+font_family Fira Code Nerd Font
+# font_size 17.1
+# font_family Iosevka Term Nerd Font
 tab_bar_style hidden
 enable_audio_bell no
 hide_window_decorations yes
